Modified the UML + Improved the display bug of tabulations in pokemon cards